# podcast-realtime-transcription

./: .gitignore  AGENTS.md  Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  faster_whisper_server.py  next.config.js  package.json  pyproject.toml  tailwind.config.js  test-all-deploy.ps1  test-all-deploy.sh
app/: globals.css  layout.tsx  page.tsx
app/api/episodes/: route.ts
app/api/extract-expressions/: route.ts
app/api/proxy-azure-speech/: route.ts
app/api/proxy-download/: route.ts
app/api/proxy-transcribe/: route.ts
app/api/search/: route.ts
components/: AzureSpeechTranscriber.tsx  FasterWhisperTranscriber.tsx  Player.tsx  Settings.tsx  Transcript.tsx  TranscriptSegmentList.tsx
components/ui/: badge.tsx  button.tsx
infra/: cleanup.ps1  cleanup.sh  common.bicep  setup.ps1  setup.sh
infra/aci/: deploy.ps1  deploy.sh  main.bicep  main.bicepparam  parameters.json
infra/aks/: deploy.ps1  deploy.sh  k8s-deployment.yaml  main.bicep  main.bicepparam  parameters.json
infra/app-service/: deploy.ps1  deploy.sh  main.bicep  main.bicepparam  parameters.json
infra/container-app/: deploy.ps1  deploy.sh  main.bicep  main.bicepparam  parameters.json
lib/: appSettings.ts  storage.ts  types.ts  utils.ts
public/: manifest.json
scripts/: kill-port.ps1  test-podcastindex.mjs  update-serving-container.ps1
