[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podcast-realtime-transcription"
version = "0.1.0"
description = "Podcast 🎧 + live transcription + tap-to-jump navigation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.9",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "python-multipart>=0.0.20",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uvicorn>=0.38.0",
]

[tool.uv]
allowed-deprecations = []
